--- a/styles/partials/_globals.scss
+++ b/styles/partials/_globals.scss
@@ -36,8 +36,16 @@ span {
 .get-in-touch__logo {
     max-width: $logo-max-width;
 }
+
 .container {
     max-width: 1044px;
     padding: 0 $size-increment-x3;
     margin: 0 auto;
+}
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
