--- a/styles/partials/_globals.scss
+++ b/styles/partials/_globals.scss
@@ -33,16 +33,13 @@ span {
     line-height: $size-increment-x4;
 }
 .topbar__logo,
-.get-in-touch__logo {
+.contact__logo {
     max-width: $logo-max-width;
 }
 
 .container {
     max-width: 1044px;
-    padding: 0 $size-increment-x3;
     margin: 0 auto;
-}
-.flex-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
