--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -23,11 +23,42 @@ $secondary-color-alternate: #E1E1E1;
 $secondary-color-subsidiary: #FAFAFA;
 
 /* ##   font   ## */
+
 $font-path: "../assets/font";
 $font-face: "AvenirNext";
 $font-weight-regular: 400;
 $font-weight-demi: 600;
 $font-weight-bold: 700;
+
+/* ##   text styles   ## */
+$page-section-header: $size-increment-x4;
+$page-section-line-height: $size-increment-x5;
+
+$sub-header: 0.875rem;
+$sub-header-line-height: 1.375rem;
+
+$body-footer-copy: 0.813rem;
+$body-footer-line-height: 1.125rem;
+
+$labels: 0.625rem;
+$labels-line-height: 1.25rem;
+
+$page-header-large: 3.75rem;
+$page-line-height-large: 4.25rem;
+
+$section-header-large: $size-increment-x5-1;
+$section-line-height: 2.75rem;
+
+$sub-header-large: $size-increment-x4;
+$sub-line-height-large: $size-increment-x5;
+
+$body-footer-copy-large: $sub-header;
+$body-copy-line-height-large: $sub-header-line-height;
+$footer-copy-line-height-large: $labels-line-height;
+
+$labels-large: 0.75rem;
+$labels-line-height: $labels-line-height;
+
 
 /* ##   responsive breakpoint   ## */ 
 
@@ -35,6 +66,7 @@ $desktop-resolution: 1280px;
 $tablet-resolution: 768px;
 
 /* ##   site Container   ## */ 
+
 $site-container: 1044px;
 
 /* ##   branding   ## */ 
