--- a/styles/partials/_reset.scss
+++ b/styles/partials/_reset.scss
@@ -2,9 +2,22 @@
 
 /* ## Reset ## */
 
-* {
+html, body, div, span,
+h1, h2, h3, h4, h5, h6, p, blockquote, cite, a,
+ul, li, figure, figcaption, footer, header,
+nav, section {
     box-sizing: border-box;
-    margin: 0;
-    border: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+ul {list-style: none;}
+
+blockquote, q {quotes: none;}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
