--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -2,6 +2,7 @@
 
 $size-increment-x1: .25rem; /* 4px */
 $size-increment-x2: .5rem; /* 8px */
+$size-increment-x2-1: .75rem; /* 12px */
 $size-increment-x3: 1rem; /* 16px */
 $size-increment-x4: 1.5rem; /* 24px */
 $size-increment-x5: 2rem; /* 32px */
