--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,1 +1,366 @@
-/*# sourceMappingURL=shows.css.map */
+/* ##   size increments   ## */
+/* 4px */
+/* 8px */
+/* 12px */
+/* 16px */
+/* 24px */
+/* 32px */
+/* 36px */
+/* 40px */
+/* 48px */
+/* 56px */
+/* 64px */
+/* 80px */
+/* ##   colors   ## */
+/* ##   font   ## */
+/* ##   text styles   ## */
+/* ##   site Container   ## */
+/* ##   responsive breakpoint   ## */
+/* ##   branding   ## */
+/* ##   buttons   ## */
+/* ## Reset ## */
+html, body, div, span,
+h1, h2, h3, h4, h5, h6, p, blockquote, cite, a,
+ul, li, figure, figcaption, footer, header,
+nav, section, form, input, button, textarea, hr {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+@font-face {
+  src: url("../assets/font/AvenirNextLTPro-Regular.woff2") format("woff2");
+  font-family: "AvenirNext";
+  font-weight: 400;
+}
+@font-face {
+  src: url("../assets/font/AvenirNextLTPro-Demi.woff2") format("woff2");
+  font-family: "AvenirNext";
+  font-weight: 600;
+}
+@font-face {
+  src: url("../assets/font/AvenirNextLTPro-Bold.woff2") format("woff2");
+  font-family: "AvenirNext";
+  font-weight: 700;
+}
+/* ## responsive breakpoints ## */
+/* ## utiilty mixins ## */
+/* ## Default Styles ## */
+body {
+  font-family: "AvenirNext";
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  color: #323232;
+}
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+a {
+  text-decoration: none;
+  font-style: normal;
+  color: #FFFFFF;
+}
+
+h1, h2 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  h2 {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+}
+
+h3, h4 {
+  font-weight: 600;
+  font-style: normal;
+}
+
+img {
+  width: 100%;
+}
+
+span, label {
+  font-style: normal;
+  display: block;
+}
+
+span {
+  color: #FFFFFF;
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+  background-color: #E1E1E1;
+}
+
+.topbar__logo,
+.contact__logo {
+  max-width: 120px;
+}
+
+.flex-container, .container, .contact__container, .topbar__container, .topbar__items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.container, .contact__container, .topbar__container, .topbar__items {
+  max-width: 1044px;
+  padding: 0 1rem;
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .container, .contact__container, .topbar__container, .topbar__items {
+    padding: 0 2.25rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container, .contact__container, .topbar__container, .topbar__items {
+    padding: 0 0;
+  }
+}
+
+/* ###  header/navigation   ### */
+.topbar {
+  background-color: #323232;
+}
+.topbar__container {
+  padding: 0 0;
+}
+@media screen and (min-width: 768px) {
+  .topbar__container {
+    padding: 0 2.25rem;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    gap: 3.5rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .topbar__container {
+    padding: 0;
+  }
+}
+.topbar__back-to-home {
+  padding: 1rem 0;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .topbar__back-to-home {
+    padding: 0;
+    margin: 0;
+  }
+}
+.topbar__back-to-home, .topbar__navigation, .topbar__items {
+  flex: 0 0 100%;
+}
+@media screen and (min-width: 768px) {
+  .topbar__back-to-home, .topbar__navigation, .topbar__items {
+    flex: 0 0 auto;
+  }
+}
+.topbar__items {
+  padding: 0 0;
+  list-style: none;
+  align-items: flex-start;
+}
+@media screen and (min-width: 768px) {
+  .topbar__items {
+    gap: 2rem;
+  }
+}
+.topbar__item, .topbar__link {
+  transition: all 0.2s ease;
+}
+.topbar__item {
+  flex: 0 0 50%;
+  padding: 0 1rem 0.5rem;
+  font-weight: 600;
+  text-align: center;
+}
+.topbar__item:hover, .topbar__item--active {
+  border-bottom: 0.25rem solid #FFFFFF;
+  cursor: pointer;
+}
+.topbar__item:hover > a, .topbar__item--active > a {
+  color: #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .topbar__item {
+    padding: 1.5rem 0;
+    flex: 0 0 auto;
+  }
+}
+.topbar__link {
+  color: #AFAFAF;
+}
+
+.contact {
+  background-color: #323232;
+}
+.contact__container {
+  justify-content: flex-start;
+  padding-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .contact__container {
+    padding-bottom: 2.25rem;
+  }
+}
+.contact__title {
+  flex: 1 0 100%;
+  font-weight: 600;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .contact__title {
+    font-size: 2.5rem;
+    order: -1;
+    flex: 1 1 30%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .contact__title {
+    flex: 0 1 30%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact__title {
+    padding-top: 3rem;
+    padding-bottom: 2.25rem;
+  }
+}
+.contact__social {
+  flex: 1 0 100%;
+  display: flex;
+  gap: 2rem;
+}
+@media screen and (min-width: 768px) {
+  .contact__social {
+    order: -1;
+    flex: 1 1 30%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .contact__social {
+    flex: 0 1 30%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact__icon {
+    width: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact__icon--facebook {
+    width: 18px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact__icon--twitter {
+    width: 35px;
+  }
+}
+.contact__point {
+  flex: 1 0 100%;
+}
+@media screen and (min-width: 768px) {
+  .contact__point {
+    flex: 1 0 30%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .contact__point {
+    flex: 0 1 30%;
+  }
+}
+.contact__person {
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .contact__person {
+    padding-top: 0;
+    padding-bottom: 2.25rem;
+  }
+}
+.contact__location {
+  padding-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .contact__location {
+    padding-bottom: 2.25rem;
+  }
+}
+.contact__title, .contact__name, .contact__company, .contact__copyright {
+  color: #FFFFFF;
+}
+.contact__name, .contact__company {
+  font-weight: 700;
+}
+.contact__icon, .contact__logo {
+  vertical-align: bottom;
+}
+.contact__back-to-home {
+  display: block;
+  margin-top: 3rem;
+  padding-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .contact__back-to-home {
+    flex: 1 1 30%;
+    padding-bottom: 0;
+    margin-top: 0;
+    order: -1;
+    text-align: right;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .contact__back-to-home {
+    flex: 1 0 40%;
+  }
+}
+.contact__copyright {
+  flex: 1 0 100%;
+  font-size: 12px;
+}
+@media screen and (min-width: 768px) {
+  .contact__copyright {
+    font-size: 1rem;
+    margin-top: 3rem;
+  }
+}/*# sourceMappingURL=shows.css.map */
