--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -11,7 +11,7 @@ $size-increment-x6: 2.5rem; /* 40px */
 $size-increment-x7: 3rem; /* 48px */ 
 $size-increment-x8: 3.5rem; /* 56px */
 $size-increment-x9: 4rem; /* 64px */ 
-$size-increment-x9: 5rem; /* 80px */ 
+$size-increment-x10: 5rem; /* 80px */ 
 
 /* ##   colors   ## */
 
@@ -59,3 +59,6 @@ $logo-max-height: 20px;
 /* ##   buttons   ## */ 
 
 $large-screen-cta-min-width: 150px;
+
+/* ##   imagery   ## */ 
+$image-path: "../assets/images/";
