--- a/styles/shows.css
+++ b/styles/shows.css
@@ -18,6 +18,7 @@
 /* ##   responsive breakpoint   ## */
 /* ##   branding   ## */
 /* ##   buttons   ## */
+/* ##   imagery   ## */
 /* ## Reset ## */
 html, body, div, span,
 h1, h2, h3, h4, h5, h6, p, blockquote, cite, a,
@@ -130,7 +131,7 @@ hr {
   max-width: 120px;
 }
 
-.flex-container, .container, .contact__container, .topbar__container, .topbar__items {
+.flex-container, .hero__content, .container, .hero__container, .contact__container, .topbar__container, .topbar__items {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -138,18 +139,18 @@ hr {
   align-items: center;
 }
 
-.container, .contact__container, .topbar__container, .topbar__items {
+.container, .hero__container, .contact__container, .topbar__container, .topbar__items {
   max-width: 1044px;
   padding: 0 1rem;
   margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
-  .container, .contact__container, .topbar__container, .topbar__items {
+  .container, .hero__container, .contact__container, .topbar__container, .topbar__items {
     padding: 0 2.25rem;
   }
 }
 @media screen and (min-width: 1280px) {
-  .container, .contact__container, .topbar__container, .topbar__items {
+  .container, .hero__container, .contact__container, .topbar__container, .topbar__items {
     padding: 0 0;
   }
 }
@@ -362,5 +363,102 @@ hr {
   .contact__copyright {
     font-size: 1rem;
     margin-top: 3rem;
+  }
+}
+
+.hero {
+  height: 32vh;
+}
+.hero__overlay {
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.hero__container {
+  height: 100%;
+  justify-content: flex-start;
+}
+.hero__title {
+  color: #FFFFFF;
+}
+@media screen and (min-width: 550px) {
+  .hero__title {
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 650px) {
+  .hero__title {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 3.5rem;
+  }
+}
+
+.hero {
+  background: url("../assets/images/hero-shows.jpg") center no-repeat;
+  background-size: cover;
+  height: 100%;
+}
+@media screen and (min-width: 650px) {
+  .hero {
+    height: 48vh;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 60vh;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 80vh;
+  }
+}
+.hero__container {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.hero__content {
+  flex: 1 1 100%;
+  justify-content: flex-start;
+}
+.hero__pretitle {
+  flex: 1 1 100%;
+  font-weight: 600;
+}
+@media screen and (min-width: 768px) {
+  .hero__pretitle {
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+  }
+}
+.hero__title {
+  flex: 0 1 60%;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 3.5rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__title {
+    flex: 1 1 50%;
+  }
+}
+.hero__player {
+  flex: 1 1 100%;
+}
+@media screen and (min-width: 768px) {
+  .hero__player {
+    flex: 0 1 60%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__player {
+    flex: 1 1 50%;
   }
 }/*# sourceMappingURL=shows.css.map */
