--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,3 +1,64 @@
-@use './partials/includes' as *;
+@use './partials/variables' as *;
+@use './partials/reset' as *;
+@use './partials/globals' as *;
+@use './partials/fontface' as *;
+@use './partials/mixins' as *;
+
 @use './partials/header' as *;
 @use './partials/footer' as *;
+
+@use './partials/hero' as *;
+
+.hero {
+    @include set-background-image("hero-shows.jpg");
+    height: 100%;
+
+    @include custom-responsive("min", 650px) {height: 48vh;}
+    @include tablet-responsive {height: 60vh;}
+    @include desktop-responsive {height: 80vh;}
+
+    &__container {
+        padding-top: $size-increment-x5;
+        padding-bottom: $size-increment-x5;
+    }
+
+    &__content {
+        @include flex-item-realestate(1, 1, 100%);
+        @extend .flex-container;
+        justify-content: flex-start;
+    }
+
+    &__pretitle {
+        @include flex-item-realestate(1, 1, 100%);
+        font-weight: $font-weight-demi;
+
+        @include tablet-responsive{
+            font-size: $size-increment-x4;
+            line-height: $size-increment-x5-1;
+        }
+    }
+
+    &__title {
+        @include flex-item-realestate(0, 1, 60%);
+        @include padding-headline("mobile");
+
+        @include tablet-responsive {
+            font-size: $size-increment-x8;
+        }
+
+        @include desktop-responsive {
+            @include flex-item-realestate(1, 1, 50%);
+        }
+    }
+
+    &__player {
+        @include flex-item-realestate(1, 1, 100%);
+
+        @include tablet-responsive {
+            @include flex-item-realestate(0, 1, 60%);
+        }
+        @include desktop-responsive {
+            @include flex-item-realestate(1, 1, 50%);
+        }
+    }
+}
