--- a/styles/partials/_globals.scss
+++ b/styles/partials/_globals.scss
@@ -47,7 +47,7 @@ span, label {
     font-style: normal;
     display: block;
 }
-span {
+.hero, footer {
     color: $primary-color-subsidiary;
 }
 
@@ -77,5 +77,28 @@ hr {
 
     @include tablet-responsive {padding: 0 $size-increment-x5-1;}
     @include desktop-responsive {padding: 0 0;}
+}
 
+.cta {
+    @extend .flex-container;
+
+    min-height: $size-increment-x6;
+    background-color: $primary-color-main;
+    color: $primary-color-subsidiary;
+    font-weight: $font-weight-bold;
+    border-radius: $size-increment-x1;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    @include tablet-responsive {
+        min-width: $large-screen-cta-min-width;
+        padding: 0 $size-increment-x5;
+    }
+}
+
+.label {
+    margin-bottom: $size-increment-x1;
+    color: $primary-color-alternate;
+    font-weight: $font-weight-demi;
+    text-transform: uppercase;
 }
