--- a/styles/shows.css
+++ b/styles/shows.css
@@ -464,7 +464,13 @@ hr {
 }
 @media screen and (min-width: 768px) {
   .hero__title {
+    flex: 0 1 70%;
     font-size: 3.5rem;
+  }
+}
+@media screen and (min-width: 885px) {
+  .hero__title {
+    flex: 0 1 58%;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -581,6 +587,16 @@ hr {
 }
 .shows__city {
   font-weight: 600;
+}
+@media screen and (min-width: 768px) {
+  .shows__action {
+    letter-spacing: -0.01rem;
+  }
+}
+@media screen and (min-width: 780px) {
+  .shows__action {
+    letter-spacing: 0;
+  }
 }
 .shows__divider {
   margin-bottom: 1rem;
