Incorporate TA comments - apply fixes/updates

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -25,8 +25,8 @@ $secondary-color-subsidiary: #FAFAFA;
 
 /* ##   font   ## */
 
-$font-path: "../assets/font";
-$font-face: "AvenirNext";
+$font-path: "../assets/fonts";
+$font-face: AvenirNext, Arial, Helvetica, sans-serif;
 $font-weight-regular: 400;
 $font-weight-demi: 600;
 $font-weight-bold: 700;
