--- a/styles/shows.css
+++ b/styles/shows.css
@@ -13,11 +13,7 @@
 /* 80px */
 /* ##   colors   ## */
 /* ##   font   ## */
-/* ##   text styles   ## */
 /* ##   site Container   ## */
-/* ##   responsive breakpoint   ## */
-/* ##   branding   ## */
-/* ##   buttons   ## */
 /* ##   imagery   ## */
 /* ## Reset ## */
 html, body, div, span,
@@ -274,18 +270,19 @@ hr {
   .contact__title {
     font-size: 2.5rem;
     order: -1;
+    flex: 1 1 32%;
+    padding-top: 3rem;
+    padding-bottom: 2.25rem;
+  }
+}
+@media screen and (min-width: 790px) {
+  .contact__title {
     flex: 1 1 30%;
   }
 }
 @media screen and (min-width: 1280px) {
   .contact__title {
     flex: 0 1 30%;
-  }
-}
-@media screen and (min-width: 768px) {
-  .contact__title {
-    padding-top: 3rem;
-    padding-bottom: 2.25rem;
   }
 }
 .contact__social {
@@ -329,6 +326,21 @@ hr {
 }
 @media screen and (min-width: 1280px) {
   .contact__point {
+    flex: 0 1 30%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact__point:first-of-type {
+    flex: 1 0 32%;
+  }
+}
+@media screen and (min-width: 790px) {
+  .contact__point:first-of-type {
+    flex: 1 0 30%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .contact__point:first-of-type {
     flex: 0 1 30%;
   }
 }
